<resources>
    <string name="app_name">Ho11oscope</string>

    <!-- Navbar -->
    <string name="nav_open">Ouvrir le panneau</string>
    <string name="nav_close">Fermer le panneau</string>

    <string name="nav_youtube">Youtube</string>
    <string name="nav_opengl">OpenGL</string>
    <string name="nav_poly">Poly</string>
    <string name="nav_settings">Paramètres</string>

    <!-- Youtube -->
    <string name="yt_search_hint">Vidéos</string>
    <string name="yt_tool_search">Rechercher</string>
    <string name="yt_tool_clearhistory">Vider l\'historique</string>
    <string name="yt_video_playButton">Lancer</string>

    <!-- OpenGL -->
    <string name="opengl_triangle">Triangle</string>
    <string name="opengl_carre">Carré</string>
    <string name="opengl_hexagone">Hexagone</string>

    <!-- Poly -->
    <string name="poly_play">Lancer</string>

    <string name="poly_list">Liste</string>
    <string name="poly_lights">Lumières</string>
    <string name="poly_settings">Rendu</string>

    <string name="poly_settings_colors">Couleurs</string>
    <string name="poly_settings_ambient">Couleur ambiente</string>
    <string name="poly_settings_diffuse">Couleur diffuse</string>
    <string name="poly_settings_specular">Couleur d\'éclat</string>
    <string name="poly_settings_colors_format" formatted="true">%d %%</string>

    <string name="poly_settings_effects">Effets</string>
    <string name="poly_settings_lumiere_power">Lumière</string>
    <string name="poly_settings_explode_magnitude">Explosion</string>

    <string name="poly_light_pointlight" formatted="true">Light #%d</string>
    <string name="poly_light_distance">Distance</string>
    <string name="poly_light_hauteur">Hauteur</string>
    <string name="poly_light_angle">Angle</string>

    <!-- Préferences -->
    <string name="player_settings">Lecteur</string>
    <string name="player_brightness_setting">Luminosité maximale</string>

    <string name="opengl_settings">Rendu OpenGL</string>
    <string name="opengl_transparency_setting">Transparence</string>
    <string name="opengl_wireframe_rendering_setting">Rendu fil de fer</string>
    <string name="opengl_normals_rendering_setting">Affichage des normales</string>

    <!-- Others -->
    <string name="angle_deg">°</string>
    <string name="poly_light_action_deactivate">Désactiver</string>
    <string name="poly_light_action_delete">Supprimer</string>
</resources>
