<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory android:title="@string/poly_settings_effects">
        <!--suppress AndroidElementNotAllowed -->
        <net.capellari.julien.preference.SeekBarPreference
            android:title="@string/poly_settings_lumiere_power"

            android:key="lightPower"
            android:defaultValue="50"
            android:max="400"
            app:min="100"

            app:iconSpaceReserved="false" />

        <!--suppress AndroidElementNotAllowed -->
        <net.capellari.julien.preference.SeekBarPreference
            android:title="@string/poly_settings_explode_magnitude"

            android:key="explodeMagnitude"
            android:defaultValue="0"
            android:max="100"

            app:iconSpaceReserved="false" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/poly_settings_colors">
        <!--suppress AndroidElementNotAllowed -->
        <net.capellari.julien.preference.SeekBarPreference
            android:title="@string/poly_settings_ambient"

            android:key="ambientFactor"
            android:defaultValue="50"

            app:format="@string/poly_settings_colors_format"
            app:iconSpaceReserved="false" />

        <!--suppress AndroidElementNotAllowed -->
        <net.capellari.julien.preference.SeekBarPreference
            android:title="@string/poly_settings_diffuse"

            android:key="diffuseFactor"
            android:defaultValue="50"

            app:format="@string/poly_settings_colors_format"
            app:iconSpaceReserved="false" />

        <!--suppress AndroidElementNotAllowed -->
        <net.capellari.julien.preference.SeekBarPreference
            android:title="@string/poly_settings_specular"

            android:key="specularFactor"
            android:defaultValue="50"

            app:format="@string/poly_settings_colors_format"
            app:iconSpaceReserved="false" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/opengl_settings">
        <CheckBoxPreference android:title="@string/opengl_transparency_setting"
            android:defaultValue="false"
            android:key="transparency"

            app:iconSpaceReserved="false" />

        <CheckBoxPreference android:title="@string/opengl_wireframe_rendering_setting"
            android:defaultValue="false"
            android:key="wireframe_rendering"

            app:iconSpaceReserved="false" />

        <CheckBoxPreference android:title="@string/opengl_normals_rendering_setting"
            android:defaultValue="false"
            android:key="normals_rendering"

            app:iconSpaceReserved="false" />
    </PreferenceCategory>
</PreferenceScreen>