<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory android:title="@string/poly_settings_colors">
        <!--suppress AndroidElementNotAllowed -->
        <androidx.preference.SeekBarPreference
            android:title="@string/poly_settings_ambient"

            android:key="ambientFactor"
            android:defaultValue="50"

            app:iconSpaceReserved="false" />

        <!--suppress AndroidElementNotAllowed -->
        <androidx.preference.SeekBarPreference
            android:title="@string/poly_settings_diffuse"

            android:key="diffuseFactor"
            android:defaultValue="50"

            app:iconSpaceReserved="false" />

        <!--suppress AndroidElementNotAllowed -->
        <androidx.preference.SeekBarPreference
            android:title="@string/poly_settings_specular"

            android:key="specularFactor"
            android:defaultValue="50"

            app:iconSpaceReserved="false" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/opengl_settings">
        <CheckBoxPreference android:title="@string/opengl_transparency_setting"
            android:defaultValue="false"
            android:key="transparency"

            app:iconSpaceReserved="false" />

        <CheckBoxPreference android:title="@string/opengl_wired_rendering_setting"
            android:defaultValue="false"
            android:key="wire_rendering"

            app:iconSpaceReserved="false" />
    </PreferenceCategory>
</PreferenceScreen>