<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".opengl.OpenGLFragment">

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabs"
        android:elevation="4dp"
        android:background="?attr/colorPrimary"
        android:theme="@style/AppTheme.AppBarOverlay"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        app:tabBackground="?attr/colorPrimary"
        app:tabTextAppearance="@style/AppTheme.TabAppearance">

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/opengl_triangle" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/opengl_carre" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/opengl_hexagone" />
    </com.google.android.material.tabs.TabLayout>

    <net.capellari.julien.ho11oscope.opengl.OpenGLSurfaceView
        android:id="@+id/hologram"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</LinearLayout>