<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"

    app:cardCornerRadius="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView android:id="@+id/nom"
            android:drawableStart="@drawable/ic_flat_light_bulb_24dp"
            android:drawablePadding="8dp"
            android:textSize="18sp"

            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"

            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"

            tools:text="Light #1" />

        <GridLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"

            app:layout_constraintTop_toBottomOf="@id/nom"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <TextView android:text="@string/poly_light_distance"
                android:textSize="16sp"
                android:gravity="center"

                android:layout_column="0"
                android:layout_row="0"
                android:layout_rowWeight="1"
                android:layout_margin="8dp" />

            <SeekBar android:id="@+id/seek_distance"
                android:max="20"
                android:progress="5"

                android:layout_column="1"
                android:layout_columnWeight="1"
                android:layout_row="0"
                android:layout_rowWeight="1"
                android:layout_margin="8dp" />

            <EditText android:id="@+id/edit_distance"
                android:inputType="number"
                android:gravity="center"

                android:layout_column="2"
                android:layout_row="0"
                android:layout_rowWeight="1"
                android:layout_gravity="fill_horizontal"

                tools:text="10" />

            <TextView
                android:text="@string/poly_light_hauteur"
                android:textSize="16sp"
                android:gravity="center"

                android:layout_column="0"
                android:layout_row="1"
                android:layout_rowWeight="1"
                android:layout_margin="8dp" />

            <SeekBar android:id="@+id/seek_hauteur"
                android:max="20"
                android:progress="1"

                android:layout_column="1"
                android:layout_columnWeight="1"
                android:layout_row="1"
                android:layout_rowWeight="1"
                android:layout_margin="8dp" />

            <EditText android:id="@+id/edit_hauteur"
                android:inputType="number|numberSigned"
                android:gravity="center"

                android:layout_column="2"
                android:layout_row="1"
                android:layout_rowWeight="1"
                android:layout_gravity="fill_horizontal"

                tools:text="-5" />

            <TextView android:text="@string/poly_light_angle"
                android:textSize="16sp"
                android:gravity="center"

                android:layout_column="0"
                android:layout_row="2"
                android:layout_rowWeight="1"
                android:layout_margin="8dp" />

            <SeekBar android:id="@+id/seek_angle"
                android:max="360"
                android:progress="10"

                android:layout_column="1"
                android:layout_columnWeight="1"
                android:layout_row="2"
                android:layout_rowWeight="1"
                android:layout_margin="8dp" />

            <LinearLayout
                android:layout_width="wrap_content"

                android:layout_column="2"
                android:layout_row="2"
                android:layout_rowWeight="1"
                android:layout_gravity="fill_horizontal">

                <EditText android:id="@+id/edit_angle"
                    android:inputType="number"
                    android:gravity="center"

                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"

                    tools:text="250"/>

                <TextView android:text="@string/angle_deg"
                    android:textSize="20sp"
                    android:gravity="center"
                    android:textColor="@android:color/primary_text_light"

                    android:layout_width="wrap_content"
                    android:layout_height="match_parent" />
            </LinearLayout>
        </GridLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>